--- a/base/Vagrantfile
+++ b/base/Vagrantfile
@@ -6,6 +6,7 @@ Vagrant.configure(2) do |config|
     # Ubuntu 16.04 Xenial LTS 64-bit
     config.vm.box = "apolloclark/ubuntu16.04"
     # config.vm.box_version = "20170926"
+    config.vm.hostname = "packer-aws-es"
 
     # VirtualBox Provider-specific configuration
     config.vm.provider "virtualbox" do |vb, override|
@@ -43,12 +44,12 @@ Vagrant.configure(2) do |config|
             override.cache.scope = :box
         end
     end
-      
+
     # Configure the box with Ansible, running from the Host machine
     # https://www.vagrantup.com/docs/provisioning/ansible.html
     # https://www.vagrantup.com/docs/provisioning/ansible_common.html
     config.vm.provision "ansible" do |ansible|
         ansible.galaxy_role_file = "./ansible/requirements.yml"
-        ansible.playbook = "./ansible/playbook.yml"
+        ansible.playbook = "./ansible/playbook_remote.yml"
     end
 end
