--- a/base/ansible/playbook_remote.yml
+++ b/base/ansible/playbook_remote.yml
@@ -1,12 +1,17 @@
 # http://docs.ansible.com/ansible/latest/playbooks_best_practices.html#directory-layout
 ---
+# playbook.yml
 
-- hosts: all
-  connection: docker
-  gather_facts: true
+- hosts: default
+  connection: ssh
+  gather_facts: yes
+  remote_user: vagrant
   become: true
-  become_user: "root"
+  become_method: sudo
+  become_user: root
   vars_files:
     - "vars.yml"
   roles:
+    - geerlingguy.firewall
+    - java_role
     - apolloclark.elasticsearch
