--- a/base/ansible/requirements.yml
+++ b/base/ansible/requirements.yml
@@ -2,3 +2,6 @@
 ---
 - src: geerlingguy.firewall
 - src: apolloclark.elasticsearch      # https://github.com/apolloclark/ansible-role-elasticsearch
+- src: https://github.com/apolloclark/java_role
+  version: develop
+  name: java_role
