--- a/base/ansible/vars.yml
+++ b/base/ansible/vars.yml
@@ -14,67 +14,16 @@ firewall_allowed_tcp_ports:
   - "9200" # Elasticsearch
   - "9300" # Elasticsearch
 
-# geerlingguy/java
-java_packages:
-  - openjdk-8-jre
+# apolloclark/java_role
+java_implementation: openjdk
+java_open_jdk_version: "11.x"
 
 
-
-es_ip: "127.0.0.1"
-kafka_ip: "127.0.0.1"
-logstash_ip: "127.0.0.1"
-kibana_ip: "127.0.0.1"
-
-
-
-# apolloclark/crontab
-crontab:
-  global:
-    - "@reboot root /home/vagrant/restart_elk_services.sh"
-
-# apolloclark/kafka
-kafka:
-  version: "2.0.0"
-  scala_version: "2.11"
-
-# apolloclark/heartbeat
-heartbeat:
-  version: "6.6.2"
-  install_only: true
-
-# apolloclark/metricbeat
-metricbeat:
-  version: "6.6.2"
-  install_only: true
-
-# apolloclark/packetbeat
-packetbeat:
-  version: "6.6.2"
-  install_only: true
-
-# apolloclark/filebeat
-filebeat:
-  version: "6.6.2"
-  install_only: true
-
-# apolloclark/auditbeat
-auditbeat:
-  version: "6.6.2"
-  install_only: true
 
 # apolloclark/elasticsearch
-# BINDING TO 0.0.0.0 IS DANGEROUS, UNLESS YOU ENFORCE FIREWALL RULES
-# OR USE X-PACK
 elasticsearch:
-  version: "6.6.2"
+  version: "7.3.0"
   install_only: true
-      
-# apolloclark/logstash
-logstash:
-  version: "6.6.2"
-  install_only: true
-
-# apolloclark/kibana
-kibana:
-  version: "6.6.2"
-  install_only: true
+  skip_restart: true
+  skip_start: true
+  install_plugins: []
